<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/windowBackground">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_padding"
            android:padding="@dimen/secondary_padding"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.75">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    style="@style/SparkChat_ToolbarTitleTheme"/>

                <TextView
                    android:id="@+id/developer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_developer_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/secondary_text_size"
                    android:fontFamily="@font/roboto_medium"
                    android:singleLine="true"
                    android:ellipsize="end"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="@string/label_version"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="@dimen/timestamp_text_size"
                        android:fontFamily="@font/roboto_regular"
                        android:singleLine="true"
                        android:ellipsize="end"/>
                    
                    <TextView
                        android:id="@+id/version_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="@string/app_version"
                        android:paddingLeft="@dimen/primary_padding"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="@dimen/timestamp_text_size"
                        android:fontFamily="@font/roboto_regular"
                        android:singleLine="true"
                        android:ellipsize="end"/>
                    
                </LinearLayout>
                
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/medium_padding"
                android:layout_weight="0.25"
                app:cardCornerRadius="@dimen/medium_padding"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/app_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/profile_img_holder"
                    android:scaleType="fitXY"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_divider"
            android:background="@color/divider_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/secondary_padding"
            android:layout_margin="@dimen/medium_padding"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/primaryTextColor"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:lineSpacingExtra="@dimen/primary_padding"
            android:text="@string/warning_app_intro"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_divider"
            android:background="@color/divider_color"/>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_about_app"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/medium_padding"
            android:layout_gravity="center_horizontal"
			android:background="@color/windowBackground"
            app:menu="@menu/menu_about_app"
            app:itemTextAppearance="@style/SparkChat_NavigationTextStyle"
            app:itemIconTint="@color/colorControlNormal"/>
    </LinearLayout>

    
    
</ScrollView>

